--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
   <%= link_to current_user.first_name, user_path(current_user.id) %>
   <%= link_to 'Logout',  destroy_user_session_path, :method => :delete %>
   <% else %>
-  <%= link_to 'Login', user_session_path %>
-  <%= link_to 'Sign up', new_user_session %>
+  <%= link_to 'Login', new_user_session_path %>
+  <%= link_to 'Sign up', new_user_registration_path %>
   <% end %>
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
