Change publishable key on credit card form

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -2,9 +2,9 @@
   <script
     src="https://checkout.stripe.com/checkout.js"
     class="stripe-button"
-    data-key="pk_test_6pRNASCoBOKtIshFeQd4XMUh"
+    data-key="pk_test_GNkZKnVDlMTTXnR2mFFpBWQp"
     data-image="/square-image.png"
-    data-name="Demo Site"
+    data-name="drivewaze"
     data-description="2 widgets ($20.00)"
     data-amount="2000">
   </script>
