Add icon to charge form

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -3,9 +3,9 @@
     src="https://checkout.stripe.com/checkout.js"
     class="stripe-button"
     data-key="pk_test_GNkZKnVDlMTTXnR2mFFpBWQp"
-    data-image="/square-image.png"
+    data-image="/doge.jpeg"
     data-name="drivewaze"
-    data-description="2 widgets ($20.00)"
-    data-amount="2000">
+    data-description="Charge for driveway rental"
+    data-amount="500">
   </script>
 </form>
