remove private pub, begin to initialize pusher

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <script src="https://maps.googleapis.com/maps/api/js"></script>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag "https://js.pusher.com/3.0/pusher.min.js" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
