--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,2 +1,3 @@
-<button class = "new-message"> Start a new conversation with: 
-<%= select_tag 'user_id', options_for_select(@users.collect{ |u| [u.first_name, u.id] }) %> </button>
+<script type="text/javascript" charset="utf-8">
+var pusher = new Pusher('52de3ae026c15fc8be07')
+</script>
