--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,5 +1,10 @@
-  <div style='width: 800px;'>
-    <div id="map" style='width: 800px; height: 400px;'></div>
-  </div>
+<%= form_tag '/search', id: 'search-form' do %>
+  <%= text_field_tag :term %>
+  <%= submit_tag "Search"%>
+<% end %>
+
+<div style='width: 800px;'>
+  <div id="map" style='width: 800px; height: 400px;'></div>
+</div>
 <div class="single-listing">
 </div>
