--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,4 +1,4 @@
-<form action="/charges" method="POST">
+<form action="/bookings" method="POST">
   <script
     src="https://checkout.stripe.com/checkout.js"
     class="stripe-button"
