Add basic styling

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,3 +1,5 @@
 <%= render 'listing' %>
 
-<%= image_tag @map_image %>
+<div id="static-map">
+  <%= image_tag @map_image, id: "listing-show-map" %>
+</div>
