--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,10 +1,16 @@
-<%= form_tag '/search', id: 'search-form' do %>
-  <%= text_field_tag :term %>
-  <%= submit_tag "Search"%>
-<% end %>
-
-<div style='width: 800px;'>
-  <div id="map" style='width: 800px; height: 400px;'></div>
+<div id="search-div">
+  <div id="search-message">
+    <p>Where would you like to search today?</p>
+  </div>
+  <%= form_tag '/search', id: 'search-form' do %>
+    <%= text_field_tag :term %>
+    <%= submit_tag "Search"%>
+  <% end %>
 </div>
+
+<div id="map-container">
+  <div id="map"></div>
+</div>
+
 <div class="single-listing">
 </div>
