--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <script src="https://maps.googleapis.com/maps/api/js"></script>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag :defaults %>
-  <%= javascript_include_tag "https://js.pusher.com/3.0/pusher.min.js" %>
+  <%= javascript_include_tag "https://cdn.firebase.com/js/client/2.2.1/firebase.js" %>
+  <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
