Add info to listings show page

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -4,7 +4,7 @@
   </div>
   <%= form_tag '/search', id: 'search-form' do %>
     <%= text_field_tag :term %>
-    <%= submit_tag "Search"%>
+    <%= submit_tag "Search", id: "search-submit" %>
   <% end %>
 </div>
 
