--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,3 +1,5 @@
+<div class = "new-message-container">
+
 <h3> Chat about your rental at <%= @booking.listing.street %>, <%= @booking.listing.city %> </h3>
 
 <div id='messages'>
@@ -22,7 +24,7 @@
     <%= submit_tag("Send Message") %>
   </div>
   <% end %>
-
+</div>
 
 
 
