--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -2,4 +2,8 @@
 
 <p>You can confirm your account email through the link below:</p>
 
+<p> This link will expire in 7 days </p>
+
 <p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+
+<p>Team Drivewaze </p>
