Add headlines for user checkout confirmation page

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,3 +1,12 @@
+<h2>Order Confirmation</h2>
+
+<h3>Total</h3>
+
+<h3>Schedule</h3>
+
+<h3>Details</h3>
+
+
 <form action="/bookings" method="POST">
   <script
     src="https://checkout.stripe.com/checkout.js"
