--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,4 @@
-<h1> Write a review for <%= @reviewable.first_name || @reviewable.user.first_name %> </h1>
+<h1> Write a review for <%= @reviewable.first_name %> </h1>
 
 <h3> Review guidelines: </h3>
 <p>How was your experience? Any additional comments? Please leave a score from 1-5, 1 being the worst - 5 being the best.  </p>
