--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,4 +4,12 @@
 
 <h4> Last seen: <%= @user.last_sign_in_at.strftime("%B %d, %Y") %> </h4>
 
-
+<h4> Reviews (<%= @user.reviews.count %>) </h4>
+<ul>
+  <% @user.reviews.each do |review| %>
+   <li>From <%=link_to review.user.first_name, user_path(review.user) %>
+  on <%= review.created_at.strftime("%B %d, %Y") %> <br>
+  <%= review.review_body %> <br>
+  Rating: <%= review.review_score %> </li>
+<% end %>
+</ul>
