--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -7,7 +7,7 @@
 <h3>Details</h3>
 
 
-<form action="/bookings" method="POST">
+<form action="/listings/<%= @listing.id %>/bookings" method="POST">
   <script
     src="https://checkout.stripe.com/checkout.js"
     class="stripe-button"
