--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,3 +1,12 @@
+this is the index page for listing
+<%=link_to "New Listing",new_listing_path%>
+<ul>
+	<%@listings.each do |listing|%>
+		<li><%=listing.address%></li>
+	<%end%>
+</ul>
+<!--zino above-->
+
 <div id="search-div">
   <div id="search-message">
     <p>Where would you like to search today?</p>
