--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -5,7 +5,7 @@
 		<form id="newListingForm">
 			<div class="form-group">
 				<label for="address">Address</label>
-				<input type="text" name="address" id="listingAddress" class="form-control" placeHolder="Your City">
+				<input type="text" name="address" id="listingAddress" class="form-control" placeHolder="123 Someplace St., New York, NY 10005">
 			</div>
 			<div class="form-group">
 				<button type="submit" class="btn btn-md btn-default">Continue</button>
@@ -20,8 +20,16 @@
 		<div class="listingInfo">
 			<%=form_for @listing do |f|%>
 				<%=f.hidden_field :address%>
-				<%=f.label :info%>
-				<%=f.text_field :info, id:"listingInfo"%>
+				<%=f.label :space_description%>
+				<%=f.text_area :space_description%>
+				<%=f.label :neighborhood_info %>
+				<%=f.text_area :neighborhood_info %>
+				<%=f.label :public_transit_info %>
+				<%=f.text_area :public_transit_info %>
+				<%=f.label :other_info %>
+				<%=f.text_area :other_info %>
+				<%=f.label :rules %>
+				<%=f.text_area :rules %>
 
 				<%=f.submit "Continue"%>
 			<%end%>
