--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
   </style>
 </head>
 <body>
+  <h1 id="logo"><%= link_to "spcs", root_path %></h1>
 
   <% if user_signed_in? %>
   <%= link_to current_user.first_name, user_path(current_user.id) %>
