--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,12 @@
 <h1> Hey, I'm <%= @user.first_name %>! </h1>
 
-<% unless current_user.favorite_users.exists?(id: @user.id) %>
+<% if current_user.id != @user.id %>
+  <% unless current_user.favorite_users.exists?(id: @user.id) %>
     <%= link_to 'Add to favorites', user_favorite_users_path(user_id: @user), method: :post %>
   <% else %>
     <%= link_to 'Remove from favorites', user_favorite_user_path(user_id:@user.id, favorite_user_id: @user.id), method: :delete %>
   <% end %>
+<% end %>
 
 <h4> Member since: <%= @user.created_at.strftime("%B %d, %Y") %> </h4>
 
