Add link to go to listings#new on listing show page

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -11,7 +11,7 @@
 </div>
 
 <div id="book-listing-btn">
-  <a href="#">Book Listing</a>
+  <%= link_to "Book Listing", new_listing_booking_path(@listing)  %>
 </div>
 
 <div id="static-map">
