--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -7,7 +7,7 @@
 <p>Additional Information: <%= @listing.other_info %></p>
 </div>
 <div id="listing-rules">
-<p><%= @listing.rules %></p>
+<p>Rules: <%= @listing.rules %></p>
 </div>
 
 <div id="book-listing-btn">
