--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,13 @@
   tr{
     height:3em;
   }
+  .selected{
+    /*background-color: #C1C1C1;*/
+    background-image: linear-gradient(to bottom,#BDBDBD 0,#BDBDBD 100%);
+  }
+  .selected:focus, .selected:hover{
+    background-color:#C1C1C1;
+  }
   </style>
 </head>
 <body>
