--- a/app/views/parking_slots/show.html.erb
+++ b/app/views/parking_slots/show.html.erb
@@ -14,26 +14,26 @@
 	    <div id="propertyType" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
 	      <div class="panel-body">
 		    	<div id="propertyTypeMenu" data-type="<%=@parking_slot.slot_type%>">
-						<button class="btn btn-default btn-block btn-md" id="drivewayButton" onclick="selectProperty(0)">
-							<p>Driveway</p>
-							<p>allow renters to use excessive capacity on your driveway</p>
-						</button>
-						
-						<button class="btn btn-default btn-block btn-md" id="lawn" onclick="selectProperty(1)">
-							<p>Lawn</p>
-							<p>allow renters to park on your lawn</p>
-						</button>
+					<button class="btn btn-default btn-block btn-md" id="drivewayButton" onclick="selectProperty(0)">
+						<p>Driveway</p>
+						<p>allow renters to use excessive capacity on your driveway</p>
+					</button>
+					
+					<button class="btn btn-default btn-block btn-md" id="lawn" onclick="selectProperty(1)">
+						<p>Lawn</p>
+						<p>allow renters to park on your lawn</p>
+					</button>
 
-						<button class="btn btn-default btn-block btn-md" id="street" onclick="selectProperty(2)">
-							<p>Street Side</p>
-							<p>allow renters to park on the street side parking spot that you own</p>
-						</button>
+					<button class="btn btn-default btn-block btn-md" id="street" onclick="selectProperty(2)">
+						<p>Street Side</p>
+						<p>allow renters to park on the street side parking spot that you own</p>
+					</button>
 
-						<button class="btn btn-default btn-block btn-md" id="permit" onclick="selectProperty(3)">
-							<p>Permit</p>
-							<p>allow renters to use your parking permit on adjacent property</p>
-						</button>
-					</div>
+					<button class="btn btn-default btn-block btn-md" id="permit" onclick="selectProperty(3)">
+						<p>Permit</p>
+						<p>allow renters to use your parking permit on adjacent property</p>
+					</button>
+				</div>
 	      </div>
 	    </div>
 	  </div>
@@ -48,18 +48,18 @@
 	    </div>
 	    <div id="vehicleClass" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 	      <div class="panel-body">
-		    	<div id="vehicleClassMenu">
-						<button class="btn btn-default btn-block btn-md" id="compactButton">
+		    	<div id="vehicleClassMenu" data-type="<%=@parking_slot.vehicle_class%>">
+						<button class="btn btn-default btn-block btn-md" id="compactButton" onclick="selectVehicleClass(0)">
 							<p>Compact</p>
 							<p>ex. Chevy Spark, Toyota Yaris, Honda Civic, etc.</p>
 						</button>
 						
-						<button class="btn btn-default btn-block btn-md" id="fullSizeButton">
+						<button class="btn btn-default btn-block btn-md" id="fullSizeButton" onclick="selectVehicleClass(1)">
 							<p>Full Size</p>
 							<p>ex. Chevy Malibu, Toyota Camery, Honda Accord, etc.</p>
 						</button>
 
-						<button class="btn btn-default btn-block btn-md" id="suvButton">
+						<button class="btn btn-default btn-block btn-md" id="suvButton" onclick="selectVehicleClass(2)">
 							<p>SUV</p>
 							<p>ex. Chevy Tahoe, Toyota RAV4, Honda CRV, etc.</p>
 						</button>
@@ -79,95 +79,98 @@
 	    <div id="price" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 	      <div class="panel-body">
 		    	<div id="priceMenu">
-						<button class="btn btn-default btn-block btn-md" id="hourlyButton" data-toggle="collapse" href="#setHourlyPriceDiv" aria-expanded="false" aria-control="setHourlyPriceDiv">
-							<p>Hourly</p>
-							<p>set hourly price for this parking spot</p>
-						</button>
-		    		<div class="collapse" id="setHourlyPriceDiv">
-							<div class="well">
-								<div class="row">
-								<div class="col-xs-4 col-xs-offset-3">
-									<input type="text" class="form-control" id="priceField">
-								</div>
-								<div class="col-xs-2">
-									<button class="btn btn-md btn-primary btn-block">Set</button>
-								</div>
-								</div>
-								<div class="row" style="margin-top:1em;">
-									<div class="col-xs-offset-3 col-xs-6">
-										<button class="btn btn-md btn-danger btn-block">No Hourly Rental</button>
-									</div>
+		    		<button class="btn btn-default btn-block btn-md" id="hourlyButton" onclick="setPrice(0)">
+						<p>Hourly</p>
+						<p>set hourly price for this parking spot</p>
+					</button>
+<!-- 					<button class="btn btn-default btn-block btn-md" id="hourlyButton" data-toggle="collapse" href="#setHourlyPriceDiv" aria-expanded="false" aria-control="setHourlyPriceDiv">
+						<p>Hourly</p>
+						<p>set hourly price for this parking spot</p>
+					</button> -->
+<!-- 	    			<div class="collapse" id="setHourlyPriceDiv">
+						<div class="well">
+							<div class="row">
+							<div class="col-xs-4 col-xs-offset-3">
+								<input type="text" class="form-control" id="priceField">
+							</div>
+							<div class="col-xs-2">
+								<button class="btn btn-md btn-primary btn-block">Set</button>
+							</div>
+							</div>
+							<div class="row" style="margin-top:1em;">
+								<div class="col-xs-offset-3 col-xs-6">
+									<button class="btn btn-md btn-danger btn-block">No Hourly Rental</button>
 								</div>
 							</div>
 						</div>
+					</div> -->
 
-						<button class="btn btn-default btn-block btn-md" id="dailyButton" data-toggle="collapse" href="#setDailyPriceDiv" aria-expanded="false" aria-control="setDailyPriceDiv">
-							<p>Daily</p>
-							<p>set daily price for this parking spot</p>
-						</button>
-		    		<div class="collapse" id="setDailyPriceDiv">
-							<div class="well">
-								<div class="row">
-								<div class="col-xs-4 col-xs-offset-3">
-									<input type="text" class="form-control" id="priceField">
-								</div>
-								<div class="col-xs-2">
-									<button class="btn btn-md btn-primary btn-block">Set</button>
-								</div>
-								</div>
-								<div class="row" style="margin-top:1em;">
-									<div class="col-xs-offset-3 col-xs-6">
-										<button class="btn btn-md btn-danger btn-block">No Daily Rental</button>
-									</div>
+					<button class="btn btn-default btn-block btn-md" id="dailyButton" onclick="setPrice(1)">
+						<p>Daily</p>
+						<p>set daily price for this parking spot</p>
+					</button>
+<!-- 	    			<div class="collapse" id="setDailyPriceDiv">
+						<div class="well">
+							<div class="row">
+							<div class="col-xs-4 col-xs-offset-3">
+								<input type="text" class="form-control" id="priceField">
+							</div>
+							<div class="col-xs-2">
+								<button class="btn btn-md btn-primary btn-block">Set</button>
+							</div>
+							</div>
+							<div class="row" style="margin-top:1em;">
+								<div class="col-xs-offset-3 col-xs-6">
+									<button class="btn btn-md btn-danger btn-block">No Daily Rental</button>
 								</div>
 							</div>
 						</div>
+					</div> -->
 
-						<button class="btn btn-default btn-block btn-md" id="weeklyButton" data-toggle="collapse" href="#setWeeklyPriceDiv" aria-expanded="false" aria-control="setWeeklyPriceDiv">
-							<p>Weekly</p>
-							<p>set weekly price for this parking spot</p>
-						</button>
-		    		<div class="collapse" id="setWeeklyPriceDiv">
-							<div class="well">
-								<div class="row">
-								<div class="col-xs-4 col-xs-offset-3">
-									<input type="text" class="form-control" id="priceField">
-								</div>
-								<div class="col-xs-2">
-									<button class="btn btn-md btn-primary btn-block">Set</button>
-								</div>
-								</div>
-								<div class="row" style="margin-top:1em;">
-									<div class="col-xs-offset-3 col-xs-6">
-										<button class="btn btn-md btn-danger btn-block">No Weekly Rental</button>
-									</div>
+					<button class="btn btn-default btn-block btn-md" id="weeklyButton" onclick="setPrice(2)">
+						<p>Weekly</p>
+						<p>set weekly price for this parking spot</p>
+					</button>
+	    		<!-- 	<div class="collapse" id="setWeeklyPriceDiv">
+						<div class="well">
+							<div class="row">
+							<div class="col-xs-4 col-xs-offset-3">
+								<input type="text" class="form-control" id="priceField">
+							</div>
+							<div class="col-xs-2">
+								<button class="btn btn-md btn-primary btn-block">Set</button>
+							</div>
+							</div>
+							<div class="row" style="margin-top:1em;">
+								<div class="col-xs-offset-3 col-xs-6">
+									<button class="btn btn-md btn-danger btn-block">No Weekly Rental</button>
 								</div>
 							</div>
 						</div>
+					</div> -->
 
-						<button class="btn btn-default btn-block btn-md" id="monthlyButton" data-toggle="collapse" href="#setMonthlyPriceDiv" aria-expanded="false" aria-control="setMonthlyPriceDiv">
-							<p>Monthly</p>
-							<p>set monthly price for this parking spot</p>
-						</button>
-		    		<div class="collapse" id="setMonthlyPriceDiv">
-							<div class="well">
-								<div class="row">
-								<div class="col-xs-4 col-xs-offset-3">
-									<input type="text" class="form-control" id="priceField">
-								</div>
-								<div class="col-xs-2">
-									<button class="btn btn-md btn-primary btn-block">Set</button>
-								</div>
-								</div>
-								<div class="row" style="margin-top:1em;">
-									<div class="col-xs-offset-3 col-xs-6">
-										<button class="btn btn-md btn-danger btn-block">No Monthly Rental</button>
-									</div>
+					<button class="btn btn-default btn-block btn-md" id="monthlyButton" onclick="setPrice(3)">
+						<p>Monthly</p>
+						<p>set monthly price for this parking spot</p>
+					</button>
+	    			<!-- <div class="collapse" id="setMonthlyPriceDiv">
+						<div class="well">
+							<div class="row">
+							<div class="col-xs-4 col-xs-offset-3">
+								<input type="text" class="form-control" id="priceField">
+							</div>
+							<div class="col-xs-2">
+								<button class="btn btn-md btn-primary btn-block">Set</button>
+							</div>
+							</div>
+							<div class="row" style="margin-top:1em;">
+								<div class="col-xs-offset-3 col-xs-6">
+									<button class="btn btn-md btn-danger btn-block">No Monthly Rental</button>
 								</div>
 							</div>
 						</div>
-
-					</div>
+					</div> -->
+				</div>
 	      </div>
 	    </div>
 	  </div>
