Add bookings list to user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,7 +31,7 @@
   <div id="user-bookings">
     <h3>Current Bookings: </h3>
     <ol>
-      <% @user.current_bookings.each do |listing| %>
+      <% @user.bookings.each do |listing| %>
         <li><%= link_to listing.address, listing_path(listing) %></li>
       <% end %>
     </ol>
