--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -14,6 +14,13 @@
   <%= link_to "Book Listing", new_listing_booking_path(@listing)  %>
 </div>
 
+<% if current_user == @listing.user %>
+	<div id="edit-delete-listing-btn">
+		<%= link_to "Edit", edit_listing_path(@listing) %> | 
+		<%= link_to "Delete", listing_path(@listing), {method: :delete, data: {confirm: "Are you sure you want to delete this listing?"}}  %>
+	</div>
+<% end %>
+
 <div id="static-map">
   <%= image_tag @map_image, id: "listing-show-map" %>
 </div>
