Add routes and edit show pages to demonstrate charges and messages

--- a/app/views/bookings/confirmation.html.erb
+++ b/app/views/bookings/confirmation.html.erb
@@ -7,7 +7,7 @@
 <h3>Details</h3>
 
 
-<form action="/listings/<%= @listing.id %>/bookings" method="POST">
+<form action="/listings/<%= @listing.id %>/bookings/confirmation" method="GET">
   <script
     src="https://checkout.stripe.com/checkout.js"
     class="stripe-button"
