--- a/app/views/bookings/order-complete.html.erb
+++ b/app/views/bookings/order-complete.html.erb
@@ -1,1 +1,3 @@
 <h2>Thanks, you paid <strong>$5.00</strong>!</h2>
+
+<%= link_to "Message your parking provider" , new_booking_message_path(@booking)  %>
