--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,7 +1,7 @@
 
 <div class = "new-message-container">
 
-<h3> Chat about your rental at <%= @booking.listing.street %>, <%= @booking.listing.city %> </h3>
+<h3> Chat about your rental at <%= @booking.listing.address %></h3>
 
 <div id='messages'>
 </div>
