--- a/app/views/parking_slots/show.html.erb
+++ b/app/views/parking_slots/show.html.erb
@@ -47,6 +47,7 @@
 	      </h4>
 	    </div>
 	    <div id="vehicleClass" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+	    <!-- Maybe make vehicle classes etc data rather than hard-coding -->
 	      <div class="panel-body">
 		    	<div id="vehicleClassMenu" data-type="<%=@parking_slot.vehicle_class%>">
 						<button class="btn btn-default btn-block btn-md" id="compactButton" onclick="selectVehicleClass(0)">
