--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Drivewaze</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag "https://cdn.firebase.com/js/client/2.2.1/firebase.js" %>
   <script src="https://maps.googleapis.com/maps/api/js"></script>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
