--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -26,9 +26,12 @@
 </div>
 
 <h4> Reviews (<%= @listing.reviews.count %>) </h4>
+<% if current_user && current_user != @listing.user %>
+  <%= link_to "Review this listing", new_listing_review_path(@listing) %>
+<% end %>
 <ul>
 <% @listing.reviews.each do |review| %>
-<li>From <%= link_to review.user.first_name, user_path(review.user) %>
+<li>From <%= link_to review.reviewer.first_name, user_path(review.reviewer) %>
     on <%= review.created_at.strftime("%B %d, %Y") %> <br>
     <%= review.review_body %> <br>
   Rating: <%= review.review_score %> </li>
