--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -10,7 +10,7 @@
     <p>Where would you like to search today?</p>
   </div>
   <%= form_tag '/search', id: 'search-form' do %>
-    <%= text_field_tag :term %>
+    <input id="term" name="term" type="text" class="controls" placeholder="Enter a location" %>
     <%= submit_tag "Search", id: "search-submit" %>
   <% end %>
 </div>
