Update search box, add conditional to listing.js

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -56,3 +56,11 @@ input#search-submit {
 .single-listing{
   cursor: pointer;
 }
+input#term {
+  width: 300px;
+  border-radius: 10px;
+}
+
+input#term:focus {
+  border-radius: 10px;
+}
