--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -10,14 +10,14 @@
 <p>Rules: <%= @listing.rules %></p>
 </div>
 
-<div id="book-listing-btn">
-  <%= link_to "Book Listing", new_listing_booking_path(@listing)  %>
-</div>
-
-<% if current_user == @listing.user %>
+<% if owns?(@listing) %>
 	<div id="edit-delete-listing-btn">
 		<%= link_to "Edit", edit_listing_path(@listing) %> | 
 		<%= link_to "Delete", listing_path(@listing), {method: :delete, data: {confirm: "Are you sure you want to delete this listing?"}}  %>
+	</div>
+<% else %>
+	<div id="book-listing-btn">
+	  <%= link_to "Book Listing", new_listing_booking_path(@listing)  %>
 	</div>
 <% end %>
 
