Get description in one line on user show

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,7 @@
     <p> Last seen: <%= @user.last_sign_in_at.strftime("%B %d, %Y") %> </p>
   <% end %>
   <p> Zip Code: <%= @user.zipcode %></p>
-  <p> Description:</p> <p> <%= @user.description %> </p>
+  <p> Description: <%= @user.description %> </p>
 </div>
 
 <div id="user-listings">
