--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -56,6 +56,7 @@ input#search-submit {
 .single-listing{
   cursor: pointer;
 }
+
 input#term {
   width: 300px;
   border-radius: 10px;
@@ -67,4 +68,8 @@ input#term:focus {
 
 #search-div {
   margin-bottom: .25em;
+}
+
+#logo {
+  margin: 0;
 }
