--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -59,9 +59,12 @@
     <% end %>
        <li>From <%=link_to review.reviewer.first_name, user_path(review.reviewer) %>
       on <%= review.created_at.strftime("%B %d, %Y") %> <br>
-      <%= review.review_body %> <br>
-      Rating: <%= review.review_score %> </li>
-    <% end %>
+      <%= review.review_body %> </li>
+      <li>Rating:
+      <% review.review_score.times do %>
+      <%= image_tag("star.png", size: "20x20") %>
+      <% end %>
+    <% end %></li>
     </ul>
 </div>
 
