Fix formatting of reviews

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,17 +54,19 @@
   <% end %>
     <ul>
       <% @user.reviews.each do |review| %>
-      <% if review.user_id == current_user.id %>
-    <%= link_to "Delete Review", user_review_path(user_id: @user, id: review), method: :delete %>
-    <% end %>
-       <li>From <%=link_to review.reviewer.first_name, user_path(review.reviewer) %>
-      on <%= review.created_at.strftime("%B %d, %Y") %> <br>
-      <%= review.review_body %> </li>
       <li>Rating:
-      <% review.review_score.times do %>
-      <%= image_tag("star.png", size: "20x20") %>
+        <% review.review_score.times do %>
+          <%= image_tag("star.png", size: "20x20") %>
+        <% end %>
+      </li>
+      <li>From <%=link_to review.reviewer.first_name, user_path(review.reviewer) %>
+      on <%= review.created_at.strftime("%B %d, %Y") %> <br>
+      <%= review.review_body %> 
+      <% if review.user_id == current_user.id %>
+        <%= link_to "Delete Review", user_review_path(user_id: @user, id: review), method: :delete %>
       <% end %>
-    <% end %></li>
+      </li>
+      <% end %>
     </ul>
 </div>
 
