--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,9 +11,9 @@
   <div id="favorites-button">
     <% unless current_user == @user %>
       <% unless current_user.favorite_users.exists?(id: @user.id) %>
-        <%= link_to 'Add to favorites', user_favorite_users_path(user_id: @user), method: :post %>
+        <%= link_to 'Add to favorites', user_favorite_users_path(user_id: @user), method: :post, class: "btn btn-default" %>
       <% else %>
-        <%= link_to 'Remove from favorites', user_favorite_user_path(user_id:@user.id, favorite_user_id: @user.id), method: :delete %>
+        <%= link_to 'Remove from favorites', user_favorite_user_path(user_id:@user.id, favorite_user_id: @user.id), method: :delete, class: "btn btn-default" %>
       <% end %>
     <% end %>
   </div>
@@ -50,7 +50,7 @@
   <div id="user-reviews">
     <h3> Reviews (<%= @user.reviews.count %>) </h3>
     <% unless current_user == @user %>
-    <p><%= link_to "Add a Review", new_user_review_path(@user) %></p>
+    <p><%= link_to "Add a Review", new_user_review_path(@user), class: "btn btn-default" %></p>
     <% end %>
       <ul>
         <% @user.reviews.each do |review| %>
